--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -1,348 +1,60 @@
 
-a:active, /* активная/посещенная ссылка */
-a:hover,  /* при наведении */
-a {
-  text-decoration: none;
-  color: inherit;
-
-//   color: rgb(0, 0, 0);
-}
-
 .footer {
-    color: #C4C4C4;
-      
-    &__top {
-        margin-top: 28px;
-        background-color: #343434;
-        
-        &-inner {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            @media(max-width: 1279px) {
-                // display: none;
-            }
-    
-        }
-    }
-    &__upper {
-        // background-color: aqua;
-        margin-top: 35px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        @media(max-width: 1279px) {
-            margin: 0;
-            height: 45px;
-            align-items: center;
-        }
-
-    }
-    &__header {
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 24px;
-        letter-spacing: 0px;
-        text-align: left;
-        color: $color-white;
-        margin-bottom: 12px;
-    }
-    &__content {
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 28px;
-        letter-spacing: 0px;
-        text-align: left;
-        color: $color-gray;
-    }
-    &__help {
+    background-color: rgba(19, 30, 53, 1);
+    & .container {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        width: 360px;
-        @media(max-width: 1279px) {
-            display: none;
-        }
-
-
-    }
-    &__news {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        width: 360px;
-        @media(max-width: 1279px) {
-            display: none;
-        }
-
-    }
-    &__mix {
-        display: flex;
-        flex-direction: column;
-        width: 400px;
-        justify-content: space-between;
-        @media(max-width: 1279px) {
-            width: 100%;
-            margin: 0;
-        }
-
-        &-top {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            @media(max-width: 1279px) {
-                width: 100%;
-                margin: 0;
-            }
-
-        }
-        &-left {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            width: 134px;
-            @media(max-width: 1279px) {
-                display: none;
-            }
-    
-        }
-        &-right {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            margin-top: 11px;
-            @media(max-width: 1279px) {
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-                width: 100%;
-                margin: 0;
-            }
-
-        }
-        &-bottom {
-            
-            margin-top: 8px;
-            align-self: flex-end;
-            @media(max-width: 1279px) {
-                display: none;
-            }
-    
-            &-text {
-                font-size: 18px;
-                font-style: normal;
-                font-weight: 400;
-                line-height: 20px;
-                letter-spacing: 0px;
-                text-align: right;
-                color: $color-gray;
-            }
-            &-time {
-                font-weight: 700;
-            }
-            
-        }
-    }
-    &__button-why {
-        width: 160px;
-        @media(max-width: 1279px) {
-            display: none;
-        }
-
-    }
-    &__email {
-        margin-top: 25px;
-        @media(max-width: 1279px) {
-            display: none;
-        }
-
-        &-icon {
-            width: 18px;
-            height: 14px;
-            margin-right: 9px;
-        }
-        &-text {
-            font-size: 20px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 20px;
-            letter-spacing: 0px;
-            text-align: right;
-            color: $color-gray;
-        }
-    }
-    &__phone {
-        margin-top: 10px;
-        margin-bottom: 14px;
-        display: flex;
-        flex-direction: column;
-        align-self: flex-end;
-            @media(max-width: 1279px) {
-                margin: 0;
-                flex-direction: row;
-                align-items: center;
-                height: 45px;
-            }
-            @media(max-width: 320px) {
-                display: none;
-            }
-
-        &-icon {
-            display: none;
-            @media(max-width: 1279px) {
-                display: inline-block;
-                margin: 0 6px 0 13px;
-            }
-        }
-        &-main {
-            font-size: 25px;
-            font-style: normal;
-            font-weight: 800;
-            line-height: 25px;
-            letter-spacing: 0px;
-            text-align: right;
-            color: $color-white;
-            @media(max-width: 1279px) {
-                font-size: 18px;
-                line-height: 21px;
-                color: #C4C4C4;
-            }
-            @media(max-width: 375px) {
-                font-size: 15px;
-            }
-
-        }
-        &-others {
-            margin-top: 6px;
-            font-size: 22px;
-            font-style: normal;
-            font-weight: 800;
-            line-height: 22px;
-            letter-spacing: 0px;
-            text-align: right;
-            color: $color-gray;
-            @media(max-width: 1279px) {
-                display: none;
-            }
-        }
-    }
-    &__social-network {
-        width: 200px;
-        margin-top: 11px;
-        display: flex;
-        justify-content: space-between;
-        @media(max-width: 1279px) {
-            display: none;
-        }
-
-        &-icon {
-            width: 30px;
-            height: 30px;
-        }
-    }
-    &__back-call {
-        margin-top: 22px;
-        @media(max-width: 1279px) {
-            margin: 0;
-            margin-right: 8px;
-        }
-
-        &-button {
-            color: $color-white;
-            @media(max-width: 1279px) {
-                color: $color-red;
-            }
-        }
-    }
-    &__lower {
-        margin-top: 24px;
-        @media(max-width: 1279px) {
-            margin: 0;
-        }
-
-    }
-    &__line {
-        width: 100%;
-        height: 2px;
-        background-color: $color-red;
-        @media(max-width: 1279px) {
-            display: none;
-        }
-
-    }
-    &__category {
-        width: 100%;
-        height: 65px;
-        display: flex;
         justify-content: space-between;
         align-items: center;
-        @media(max-width: 1279px) {
-            display: none;
+        position: relative;
+        padding-top: 30px;
+        padding-bottom: 130px;
+        height: 713px;
+    }
+    &__logo-beckgraund {
+        position: absolute;
+        width: 429px;
+        height: 429px;
+        margin: 0 auto;
+        background-color: rgba(0, 195, 255, 0.1);
+        border-radius: 50%;
+        box-shadow: inset 0 0 5px 5px rgba(19, 30, 53, 1), inset 0 0 100px 80px rgba(19, 30, 53, 1);
+        z-index: 0;
+    }
+    &__logo-svg {
+        margin-top: 87px;
+        z-index: 2;
+    }
+    &__text_top {
+        position: relative;
+        font-weight: 900;
+        font-size: 52px;
+        line-height: 120%;
+        text-align: center;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        &-under {
+        color: rgba(0, 195, 255, 1);
         }
-
-        &-delimiter {
-            color: $color-red;
+        &-over {
+            position: absolute;
+            top: 2px;
+            left: 3px;
+            width: 100%;
+            height: 100%;
+            color: rgb(255, 255, 255);
         }
     }
-    &__bottom {
-        background-color: $color-grayblack;
-        &-inner {
-            height: 60px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            @media(max-width: 1279px) {
-                width: 100%;
-                margin: 0;
-                height: 45px;
-                justify-content: center;
-            }
-    
-        }
-        &-left {
-            font-size: 18px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 20px;
-            letter-spacing: 0px;
-            text-align: left;
-            color: $color-white;
-            &--mobile {
-                display: none;
-                @media(max-width: 1279px) {
-                    display: contents;
-                }
-            }
-            &--desktop {
-                @media(max-width: 1279px) {
-                    display: none;
-                }       
-            }
-        }
-        &-vasco {
-            font-weight: 700;
-            color: $color-white;
-        }
-        &-right {
-            font-size: 18px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 20px;
-            letter-spacing: 0px;
-            text-align: right;
-            color: $color-grayscale;
-            @media(max-width: 1279px) {
-                display: none;
-            }
-    
-            &-data {
-                font-weight: 700;
-                color: $color-gray;
-            }
-        }
+    &__text_bottom {
+        font-weight: 300;
+        font-size: 22px;
+        line-height: 140%;
+        text-align: center;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        color: #FFFFFF;
     }
+      
 }
 
 
