Закончен двойной слайдер в "Памятных моментах"

--- a/app/index.pug
+++ b/app/index.pug
@@ -132,6 +132,7 @@ html(lang="en")
                         include components/sliderSwiperFeedback/sliderSwiperFeedback.pug
                 .section-memorable-moments
                     .container
+                        include components/memorableMomentsDoubleSlider/memorableMomentsDoubleSlider.pug
             include components/footer/footer.pug
             include components/videoModalFrame/videoModalFrame.pug
     
