--- a/app/sass/general.scss
+++ b/app/sass/general.scss
@@ -1,6 +1,9 @@
 
 @import '../components/sliderSwiperFeedback/sliderSwiperFeedback';
+@import '../components/memorableMomentsDoubleSlider/memorableMomentsDoubleSlider';
 @import '../components/videoModalFrame/videoModalFrame';
+
+
 
 //Секкция про возраст фирмы
 .section-age {
