--- a/app/components/sliderSwiperFeedback/sliderSwiperFeedback.scss
+++ b/app/components/sliderSwiperFeedback/sliderSwiperFeedback.scss
@@ -2,6 +2,7 @@
     position: relative;
     width: 1200px;
     height: 325px;
+    margin-bottom: 200px;
     &__slide {
      
       width: 592px;
