Построчный вывод текста доделан в секции "Представление"

--- a/app/index.pug
+++ b/app/index.pug
@@ -123,9 +123,10 @@ html(lang="en")
                                         img.quote__contour-back(src="assets/images/icons/quoteContour.png", alt="Контур цитаты")
                                         img.quote__contour-white(src="assets/images/icons/quoteBackWhite.png", alt="Белый фон цитаты")
                                     .quote__content 
-                                        .quote__content-text «Мы прошли большой путь и искренне выражаем благодарность всем, кто был все эти годы с нами».
-                                        .quote__content-text-sign Владимир Елисеев
-                                        .quote__content-text-position генеральный директор<br/>«Инфосистемы Джет»
+                                        .quote__content-text_hidden «Мы прошли большой путь и искренне выражаем благодарность всем, кто был все эти годы с нами».
+                                        .quote__content-text
+                                        .quote__content-text-sign.quote__content-text-sign_hidden Владимир Елисеев
+                                        .quote__content-text-position.quote__content-text-position_hidden генеральный директор<br/>«Инфосистемы Джет»
                 .section-slider-feedback
                     .container
                         h2.section-slider-feedback__header Люди и проекты, которые<br/> нас вдохновляют
