Начинаем приколачивать бесячую бирку гвоздями

--- a/app/index.pug
+++ b/app/index.pug
@@ -26,6 +26,11 @@ html(lang="en")
                             .section-age__content-text2 ИНФОСИСТЕМЫ<br/>ДЖЕТ
                             .section-age__content-tag-contour
                             .section-age__content-tag СПАСИБО, ЧТО ВЫ С НАМИ!
+                                .section-age__content-tag-pin.js-pin
+                                    img(src="assets/images/tools/pin.png", alt="Гвоздь")
+                                .section-age__content-tag-hammer.js-hammer
+                                    img(src="assets/images/tools/hammer.png", alt="Молоток")
+
                 .section-representation
                     .container
                         .section-representation__left
