Прибил гвоздями бесячую бирку

--- a/app/index.pug
+++ b/app/index.pug
@@ -25,8 +25,10 @@ html(lang="en")
                             .section-age__content-text1 30 ЛЕТ
                             .section-age__content-text2 ИНФОСИСТЕМЫ<br/>ДЖЕТ
                             .section-age__content-tag-contour
-                            .section-age__content-tag СПАСИБО, ЧТО ВЫ С НАМИ!
-                                .section-age__content-tag-pin.js-pin
+                            .section-age__content-tag.js-section-age__content-tag СПАСИБО, ЧТО ВЫ С НАМИ!
+                                .section-age__content-tag-pin.section-age__content-tag-pin_left.js-pin_left
+                                    img(src="assets/images/tools/pin.png", alt="Гвоздь")
+                                .section-age__content-tag-pin.section-age__content-tag-pin_right.js-pin_right
                                     img(src="assets/images/tools/pin.png", alt="Гвоздь")
                                 .section-age__content-tag-hammer.js-hammer
                                     img(src="assets/images/tools/hammer.png", alt="Молоток")
