--- a/app/sass/general.scss
+++ b/app/sass/general.scss
@@ -108,7 +108,7 @@
             width: 488px;
             height: 86px;
             border-radius: 12px 12px 60px 12px;
-            transform: rotate(-10.31deg);
+            transform: rotate(-5.7deg);
             font-weight: 700;
             font-size: 15px;
             line-height: 84px;
@@ -116,22 +116,48 @@
             letter-spacing: 0.05em;
             text-transform: uppercase;
             color: #FFFFFF;
-            &:hover {
-                transform: rotate(-5.7deg);
-            }
             &-pin {
                 position: absolute;
-                top: 0;
+                top: -40%;
                 left: 0;
                 width: 90px;
                 height: 100px;
+                opacity: 0;
                 & img {
                     width: 90px;
                     height: 100px;
-    
+                }
+                &_left {
+                    
+                }
+                &_right {
+                    left: 80%;
+                }
+                &_increase {
+                    opacity: 1;
                 }
             }
-
+            & .js-pin-left__hammering {
+                opacity: 1;
+                overflow: hidden;
+                animation-name: leftHammering;
+                animation-duration: 3s;
+                animation-direction: alternate;
+                animation-iteration-count: 1;
+                animation-timing-function: steps(1);
+                animation-fill-mode: forwards;
+            }
+            & .js-pin-right__hammering {
+                opacity: 1;
+                overflow: hidden;
+                animation-name: leftHammering;
+                animation-delay: 4s;
+                animation-duration: 3s;
+                animation-direction: alternate;
+                animation-iteration-count: 1;
+                animation-timing-function: steps(1);
+                animation-fill-mode: forwards;
+            }
             &-hammer {
                 opacity: 0;
                 position: absolute;
@@ -139,21 +165,63 @@
                 left: 40%;
                 width: 90px;
                 height: 100px;
-                &_swinging {
+                &_increase {
                     opacity: 1;
-                    animation-name: swinging;
+                    animation-name: increase;
                     animation-duration: 1s;
                     animation-direction: alternate;
                     animation-iteration-count: infinite;
                     animation-timing-function: ease;
-        
                 }
                 & img {
                     width: 90px;
                     height: 100px;
+                }
+                &_hammering {
+                    opacity: 1;
+                    top: -90%;
+                    left: 12%;
+                    animation-name: hammering;
+                    animation-duration: 3s;
+                    animation-direction: alternate;
+                    animation-iteration-count: 1;
+                    animation-timing-function: ease;
+                    animation-fill-mode: forwards;
+
+
+                    &-dislocation {
+                        opacity: 1;
+                        top: -60%;
+                        left: 12%;
+                        animation-name: hammeringDislocation;
+                        animation-duration: 1s;
+                        animation-direction: alternate;
+                        animation-iteration-count: 1;
+                        animation-timing-function: ease;
+                        animation-fill-mode: forwards;
+                    }
+                    &-right {
+                        opacity: 1;
+                        top: -90%;
+                        left: 92%;
+                        animation-name: hammering;
+                        animation-duration: 3s;
+                        animation-direction: alternate;
+                        animation-iteration-count: 1;
+                        animation-timing-function: ease;
+                        animation-fill-mode: forwards;
+                    }
+
     
                 }
             }
+        }
+        & .js-section-age__content-tag {
+            transform: rotate(-10.31deg);
+            &:hover {
+                transform: rotate(-5.7deg);
+            }
+            
         }
     }
 }
@@ -493,17 +561,117 @@
         transform:rotate(-360deg);
     }
 }
-//Ключевые кадры махания молотка
-@keyframes swinging {
+//Ключевые кадры увеличения молотка
+@keyframes increase {
     0% {
-        transform:rotate(0deg);
+        transform:scale(1);
         transform-origin: 100% 100%;
     }
     100% {
-        transform:rotate(30deg);
+        transform:scale(1.5);
         transform-origin: 100% 100%;
     }
 }
+
+//Ключевые кадры махания молотка
+@keyframes hammering {
+    0% {
+        transform:rotate(-22deg);
+        transform-origin: 100% 100%;
+    }
+    25% {
+        transform:rotate(60deg);
+        transform-origin: 100% 100%;
+    }
+    26% {
+        top: -90%;
+    }
+    28% {
+        top: -75%;
+    }
+    30% {
+        transform:rotate(-22deg);
+        transform-origin: 100% 100%;
+        top: -75%;
+
+    }
+    55% {
+        transform:rotate(60deg);
+        transform-origin: 100% 100%;
+        top: -75%;
+
+    }
+    56% {
+        top: -75%;
+    }
+    58% {
+        top: -60%;
+    }
+    60% {
+        transform:rotate(-22deg);
+        transform-origin: 100% 100%;
+        top: -60%;
+
+    }
+    85% {
+        transform:rotate(60deg);
+        transform-origin: 100% 100%;
+        top: -60%;
+
+    }
+    95% {
+        transform:rotate(-22deg);
+        transform-origin: 100% 100%;
+        top: -60%;
+
+    }
+    100% {
+        transform:rotate(-22deg);
+        transform-origin: 100% 100%;
+        top: -60%;
+
+    }
+
+}
+//Забивание левого гвоздя
+@keyframes leftHammering {
+    0% {
+    }
+    27% {
+        top: -10%;
+        height: 60px;
+    }
+    57% {
+        top: 0%;
+        height: 50px;
+
+    }
+    97% {
+        top: 6%;
+        height: 33px;
+
+    }
+    100% {
+        top: 6%;
+        height: 33px;
+
+    }
+
+}
+//сдвиг молотка
+@keyframes hammeringDislocation {
+    0% {
+        top: -60%;
+        left: 12%;        
+    }
+    100% {
+        top: -90%;
+        left: 92%;        
+
+    }
+
+}
+
 
 
 //Ключевые кадры мигания первого цветного логотипа
