Добавлены подсказки/помощь

--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -28,6 +28,7 @@ header.header
                     a.header__nav-list-link(href="#") ПОЗДРАВЛЕНИЯ
                     a.header__nav-list-link(href="#") ФОТОХРОНИКА
                     a.header__nav-list-link(href="#") ЗАКЛЮЧЕНИЕ
+                    .help__tag РАСТЁТ
                 .header__nav-lang
                     a.header__nav-lang-link.header__nav-lang_rus.js-header__nav-lang_active(href="#") RU
                     a.header__nav-lang-link.header__nav-lang_eng(href="#") EN
