--- a/app/components/memorableMomentsDoubleSlider/memorableMomentsDoubleSlider.pug
+++ b/app/components/memorableMomentsDoubleSlider/memorableMomentsDoubleSlider.pug
@@ -254,3 +254,5 @@
             .right-slider__slide-text Запуск «Лето Банка» (ныне «Почта Банка») — наш первый аутсорсинговый проект такого формата и масштаба, который не потерял уникальности и длится по сей день. В 2013 году на открытие одного клиентского центра мы тратили один день. Были периоды, когда открывали по 8-10 центров в неделю, а всего открыли несколько сотен. Такой скорости работы в России, да и в Европе, точно не было.
   .section-memorable-moments__bottom-line_top
   .section-memorable-moments__bottom-line_bottom
+  .help__tag СВЯЗАНО
+
