--- a/app/sass/general.scss
+++ b/app/sass/general.scss
@@ -32,6 +32,11 @@
             animation-iteration-count: 1;
             animation-timing-function: steps(1);
         }
+        & .help__tag {
+            top: -18%;
+            left: -10%;
+            transform: rotate(30deg);
+        }
     }
     &__content {
         position: relative;
@@ -59,7 +64,12 @@
                 animation-iteration-count: infinite;
                 animation-timing-function: linear;
             }
-        }
+            & .help__tag {
+                top: -0%;
+                left: -30%;
+                // transform: rotate(30deg);
+            }
+            }
         &-text1 {
             width: 100%;
             position: absolute;
@@ -215,7 +225,12 @@
     
                 }
             }
-        }
+            & .help__tag {
+                top: -0%;
+                left: -55%;
+                // transform: rotate(30deg);
+            }
+            }
         & .js-section-age__content-tag {
             transform: rotate(-10.31deg);
             &:hover {
@@ -489,7 +504,12 @@
                             display: none;
                         }
                     }
-                }
+                    & .help__tag {
+                        top: -58%;
+                        left: -100%;
+                        transform: rotate(30deg);
+                    }
+                            }
             }
         }
         &-back {
@@ -539,6 +559,11 @@
         letter-spacing: 0.04em;
         text-transform: uppercase;
         color: #FFFFFF;
+        & .help__tag {
+            top: 25%;
+            left: -5%;
+            transform: rotate(30deg);
+        }
     }
 }
 
@@ -633,7 +658,7 @@
     }
 
 }
-//Забивание левого гвоздя
+//Забивание гвоздя
 @keyframes leftHammering {
     0% {
     }
@@ -671,9 +696,6 @@
     }
 
 }
-
-
-
 //Ключевые кадры мигания первого цветного логотипа
 @keyframes flashing {
     0% {
@@ -712,5 +734,57 @@
 }
 
 
+.help {
+    &__button {
+        border: 2px solid #00C3FF;
+        border-radius: 10px;
+        color: #00C3FF;
+        // width: 50px;
+        // height: 34px;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 34px;
+        text-align: center;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        position: fixed;
+        padding: 20px;
+        top: 10%;
+        right: 10%;
+        z-index: 199;
+        &-closed {
+            position: absolute;
+            top: -50%;
+            right: -10%;
+            color: #00C3FF;
+        }
+        &-hidden {
+            display: none;
+        }
+    }
+    &__tag {
+        display: none;
+        position: absolute;
+        color: #ffffff;
+        width: 250px;
+        height: 75px;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 34px;
+        text-align: left;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        background-image: url(../assets/images/icons/arrow.png);
+        background-repeat:no-repeat;
+        background-size: 250px 75px;
+        padding: 20px;
 
+        z-index: 199;
+    }
+    &__tag-visible {
+        display: block;
+    }
+
+
+}
 
